<resources>
    <string name="app_name">快看图片</string>
    <string name="network_error">网络异常</string>
    <string name="dbmz_title">豆瓣美女</string>
    <string name="mzitu_title">妹子图</string>
    <string name="mm_title">MM</string>
    <string name="meizitu_title">MeiZiTu</string>
    <string name="tag_title">tag</string>
    <string name="kk_title">7kk</string>
    <string name="collection_title">收藏</string>
    <string name="collection_loading">请数据加载成功再收藏</string>
    <string name="collection_ok">收藏成功</string>
    <string name="collection_deleted">取消收藏</string>
    <string name="empty_collection">没有收藏</string>
    <string name="dialog_collection_message">取消收藏？</string>
    <string name="search_title">搜索</string>
    <string name="search_dialog_hint">请输入关键词</string>
</resources>
