<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dbmz"
            android:checked="true"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/dbmz_title" />
        <item
            android:id="@+id/mzitu"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/mzitu_title" />
        <item
            android:id="@+id/mm"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/mm_title" />
        <item
            android:id="@+id/meizitu"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/meizitu_title" />
        <item
            android:id="@+id/kk"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/kk_title" />
        <item
            android:id="@+id/collection"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/collection_title" />
    </group>
</menu>